[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/frog_sad.png" type="Texture" id=1]
[ext_resource path="res://sprites/water.png" type="Texture" id=2]
[ext_resource path="res://Game Over Screen.gd" type="Script" id=3]
[ext_resource path="res://fonts/go_frog/Go Frog.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 4 )

[node name="Game Over Screen" type="Node2D"]
script = ExtResource( 3 )

[node name="waterBack" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="sadFrog" type="Sprite" parent="."]
position = Vector2( 224, 0 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )
centered = false

[node name="waterFront" type="Sprite" parent="."]
position = Vector2( 0, 392 )
scale = Vector2( 1, 0.277778 )
texture = ExtResource( 2 )
centered = false

[node name="gameOverText" type="RichTextLabel" parent="."]
margin_left = 264.0
margin_top = 32.0
margin_right = 696.0
margin_bottom = 120.0
custom_colors/default_color = Color( 0.341176, 0.52549, 0.0431373, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]GAME OVER[/center]"
visible_characters = 9
text = "GAME OVER"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
